--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ SET(CMAKE_AUTOMOC ON)
 FILE(GLOB SOURCES src/*.cpp src/*.h src/*.hpp src/*.glsl)
 
 FIND_PACKAGE(OpenGL REQUIRED)
-FIND_PACKAGE(OpenCV REQUIRED)
+FIND_PACKAGE(OpenCV 3 REQUIRED)
 FIND_PACKAGE(Qt5Widgets REQUIRED)
 FIND_PACKAGE(Qt5OpenGL REQUIRED)
 FIND_PACKAGE(ASSIMP REQUIRED)
